# sensorsimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: 01_trajectory_demo.cpp  CMakeLists.txt
include/sensorsim/core/: trajectory.hpp
include/sensorsim/utils/: quaternion.hpp  types.hpp
src/core/: trajectory.cpp
test/: CMakeLists.txt  test_trajectory.cpp
